tests/cases/variables/ok/array-dynamic-index-trap.ari
fn main() -> i64 {
  let values: [i64, 2] = [1, 2];
  let index = 2;
  values[index]
}
