tests/cases/variables/errors/array-index-out-of-range.ari
fn main() -> i64 {
  let values: [i64, 2] = [1, 2];
  values[2]
}
